--- a/portfolio.html
+++ b/portfolio.html
@@ -296,7 +296,7 @@
             </ul>
           </address>
         </div>
-        <div>
+        <div class="footer-social-container">
           <p class="text-social-icons">присоединяйтесь</p>
           <ul class="list footer-list-icons">
             <li class="footer-list-icons-items">
@@ -329,6 +329,26 @@
             </li>
           </ul>
         </div>
+        <form>
+          <p class="footer-text-form">Подпишитесь на рассылку</p>
+          <div class="footer-form-containet">
+            <label class="footer-label">
+              <input
+                class="footer-input"
+                type="email"
+                name="footer-email"
+                placeholder="E-mail"
+                required
+              />
+            </label>
+            <button class="footer-form-button" type="submit">
+              Подписаться
+              <svg width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </div>
+        </form>
       </div>
     </footer>
   </body>
