--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
               </svg>
             </label>
 
-            <label>
+            <label class="modal-label-textarea">
               <span class="modal-input-text">Комментарий</span>
               <textarea
                 class="modal-textarea"
